Adding separate API site handler
