# internal/site/model.go
@@ -1,0 +1,5 @@
+package site
+
+type Site struct {
+	Hostname string `json:"hostname"`
+}
